--- a/flightApplication/flightAppWeb/public/index.html
+++ b/flightApplication/flightAppWeb/public/index.html
@@ -17,8 +17,38 @@
                         <input type="text" placeholder="Password" name="psw">
                         <button onclick="doLogin(event)">Login</button>
                     </form>
+                    <button class="regitration" onclick="document.getElementById('id01').style.display='block'">Sign Up</button>    
                 </div>
             </div>
+        
+<div id="id01" class="modal">
+    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">Close</span>
+    <form class="modal-content" action="/action_page.php">
+      <div class="container">
+        <h1>Register for our site</h1>
+        <p>Enter your user information.</p>
+        <hr>
+        <input type="text" placeholder="Enter Username" name="username" required>
+        <input type="password" placeholder="Enter Password" name="psw" required>
+
+        <input type="text" placeholder="Enter Email" name="email" required>
+  
+        <input type="password" placeholder="Enter Password" name="psw" required>
+        <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+  
+        <label>
+          <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+        </label>
+  
+        <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+  
+        <div class="clearfix">
+          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+          <button type="submit" class="signup">Sign Up</button>
+        </div>
+      </div>
+    </form>
+  </div>
         </div>    
     </body>
    <script src="./src/app.js"></script>
