updates on the webapp side.

--- a/flightApplication/flightAppWeb/public/login.html
+++ b/flightApplication/flightAppWeb/public/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset ="UTF-8" />
+        <meta charset ="UTF-8 />
         <meta name="viewport" content= "width=device=width, initial-scale=1, user-scalable=yes"/>
         <link rel="shortcut icon" href="./images/plane.jpeg" type="image/x-icon" />
         <link 
@@ -32,10 +32,7 @@
                     Dropdown
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <div>
-                      <a id="login" class="dropdown-item" href="./login.html">Login</a>
-                      <a id="logout" class="dropdown-item" href="./login.html">Logout</a>
-                    </div>
+                    <a class="dropdown-item" href="./login.html">Login</a>
                     <a class="dropdown-item" href="./register.html">Register</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="https://www.visitscotland.com/">Home to Scotland</a>
@@ -46,13 +43,34 @@
           </nav>  
         
 
-        <!-- Optional JavaScript -->
+            <div class="container">
+                <form>
+                    <div class="form-group row">
+                      <label for="LoginInputUsername" class="col-sm-2 col-form-lable">Username</label>
+                            <input type="text" class="form-control" id="LoginInputUsername" aria-describedby="emailHelp">
+                            <small id="userHelp" class="form-text text-muted">We'll never share your information with anyone else.</small>
+                    </div>
+                    <div class="form-group row">
+                      <label for="LoginInputPassword">Password</label>
+                      <input type="password" class="form-control" id="LoginInputPassword">
+                    </div>
+                  <!--  <div class="form-group form-check">
+                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    </div> -->
+                    <button onclick="doLogin(event)" class="btn btn-light">Login</button>
+                       </div>
+            </form>
+            <script src="./src/api.config.js"></script>
+            <script src="./src/app.js"></script>
+            <script src="./src/auth.service.js"></script>
+            <script src="./src/simple-storage.js"></script>
+            <script src="./src/service-helpers.js"></script>
+             <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </body>
-   <script src="./src/app.js"></script>
-   <script src="./src/auth.service.js"></script>
-   <script src="./src/service-helpers.js"></script>
+
+</body>
 </html>
