--- a/flightApplication/webapps/public/index.html
+++ b/flightApplication/webapps/public/index.html
@@ -4,13 +4,14 @@
         <meta charset ="UTF-8 />
         <meta name="viewport" content= "width=device=width, initial-scale=1, user-scalable=yes"/>
         <link rel="stylesheet" href="./css/flexbox.css"/>
+        <link rel="shortcut icon" href="./images/plane.jpeg" type="image/x-icon" />
         <link 
             rel="stylesheet" 
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" 
             crossorigin="anonymous"
         />
-        <title>Week6</title>
+        <title>Flight Reservation System</title>
     </head>
     <body>
         <nav class="navbar sticky-top navbar-expand-md navbar-light bg-info">
@@ -43,7 +44,8 @@
                 </li>
               </ul>
             </div>
-          </nav>  
+          </nav> 
+          <
         
 
         <!-- Optional JavaScript -->
