--- a/flightApplication/flightAppWeb/public/index.html
+++ b/flightApplication/flightAppWeb/public/index.html
@@ -4,6 +4,7 @@
         <meta charset ="UTF-8" />
         <meta name="viewport" content= "width=device=width, initial-scale=1, user-scalable=yes"/>
         <link rel="shortcut icon" href="./images/plane.jpeg" type="image/x-icon" />
+        <link rel="stylesheet" href="./css/styles.css"/>
         <link 
             rel="stylesheet" 
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
@@ -44,7 +45,12 @@
               </ul>
             </div>
           </nav>  
-        
+          <div class="container">
+            <div class="bg_image">
+              <div class='fltText'>Flight Reservation System</div>
+            </div>            
+          </div>
+          
 
         <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
