--- a/flightApplication/flightAppWeb/public/about.html
+++ b/flightApplication/flightAppWeb/public/about.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-      <head>
+    <head>
         <meta charset ="UTF-8" />
         <meta name="viewport" content= "width=device=width, initial-scale=1, user-scalable=yes"/>
         <link rel="shortcut icon" href="./images/plane.jpeg" type="image/x-icon" />
+        <link rel="stylesheet" href="./css/styles.css"/>
         <link 
             rel="stylesheet" 
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
@@ -12,7 +13,6 @@
         />
         <title>Flight Reserve</title>
     </head>
-
     <body>
         <nav class="navbar sticky-top navbar-expand-md navbar-light bg-info">
             <a class="navbar-brand" href="./index.html">Flight Reserve</a>
